// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendCommandConfirmation matches snapshot hidden 1`] = `
<Dialog
  dialogContentProps={
    {
      "title": "deviceCommands.confirmSend.title",
    }
  }
  hidden={true}
  modalProps={
    {
      "isBlocking": true,
    }
  }
  onDismiss={[MockFunction]}
>
  <div>
    deviceCommands.confirmSend.body
  </div>
  <DialogFooter>
    <CustomizedPrimaryButton
      ariaLabel="deviceCommands.confirmSend.yes.ariaLabel"
      onClick={[MockFunction]}
      text="deviceCommands.confirmSend.yes.label"
    />
    <CustomizedDefaultButton
      ariaLabel="deviceCommands.confirmSend.no.ariaLabel"
      onClick={[MockFunction]}
      text="deviceCommands.confirmSend.no.label"
    />
  </DialogFooter>
</Dialog>
`;

exports[`SendCommandConfirmation matches snapshot visible 1`] = `
<Dialog
  dialogContentProps={
    {
      "title": "deviceCommands.confirmSend.title",
    }
  }
  hidden={false}
  modalProps={
    {
      "isBlocking": true,
    }
  }
  onDismiss={[MockFunction]}
>
  <div>
    deviceCommands.confirmSend.body
  </div>
  <DialogFooter>
    <CustomizedPrimaryButton
      ariaLabel="deviceCommands.confirmSend.yes.ariaLabel"
      onClick={[MockFunction]}
      text="deviceCommands.confirmSend.yes.label"
    />
    <CustomizedDefaultButton
      ariaLabel="deviceCommands.confirmSend.no.ariaLabel"
      onClick={[MockFunction]}
      text="deviceCommands.confirmSend.no.label"
    />
  </DialogFooter>
</Dialog>
`;
